# RILseq-analysis

./: config.yaml  pyproject.toml  requirements.txt
RILseq_analysis_package/: annotations_graphs.py  chimeras_venn_diagram.py  circos_plot.py  extract_genes_by_chr.py  generate_and_edit_RILseq_xslx.py  sRNAs_percent.py  utils.py
RILseq_analysis_package/cli/: add_number_of_libraries_cli.py  circos_plot_cli.py  merge_results_cli.py
